modify yolo code

--- a/runs/detect/train/args.yaml
+++ b/runs/detect/train/args.yaml
@@ -1,6 +1,6 @@
 task: detect
 mode: train
-model: yolo11x.pt
+model: yolo11m.pt
 data: datasetConfigure.yaml
 epochs: 100
 time: null
@@ -10,10 +10,10 @@ imgsz: 640
 save: true
 save_period: -1
 cache: false
-device: null
+device: 0
 workers: 8
 project: null
-name: train
+name: train2
 exist_ok: false
 pretrained: true
 optimizer: auto
@@ -104,4 +104,4 @@ erasing: 0.4
 crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: runs\detect\train
+save_dir: runs/detect/train2
